--- a/ContractionDesign/ContractionDesign.vcxproj
+++ b/ContractionDesign/ContractionDesign.vcxproj
@@ -232,6 +232,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ContractionDesign.ico" />
+    <Image Include="res\icons_calculator.ico" />
+    <Image Include="res\ico_ad_block.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
