--- a/ContractionDesign/ContractionDesign.vcxproj.filters
+++ b/ContractionDesign/ContractionDesign.vcxproj.filters
@@ -116,5 +116,11 @@
     <Image Include="res\ContractionDesign.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\icons_calculator.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\ico_ad_block.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
